<resources>
    <string name="app_name">Health Care</string>
    <string name="intro_text">Que vous soyez médecin ou patient health+ est faite pour vous.</string>
    <string name="logo">Health</string>
    <string name="pass_oub">Mot de passe oublié?</string>
    <string name="mail">Email</string>
    <string name="email">Email :</string>
    <string name="pass">Mot de passe</string>
    <string name="deja_un_cmpt">Vous avez déjà un compte ?</string>
    <string name="connect">Se connecter</string>
    <string name="creer">Créer un compte</string>
    <string name="vous">Vous êtes ?</string>
    <string name="med">Médecin</string>
    <string name="pat">Patient</string>
    <string name="rdv">Nouveau RDV</string>
    <string name="cons">Consultations</string>
    <string name="trouve_med">Trouvez un médecin </string>
    <string name="bienvenu">Bienvenue sur Health+ une dernière étape.</string>
    <string name="esp_p">Espace Patient</string>
    <string name="spe">Spécialité :</string>
    <string name="tel">Tél :</string>
    <string name="vil">Ville :</string>
    <string name="prdv">Prendre rdv</string>
    <string name="choixDate">Date :</string>
    <string name="chdate">Choisir une date</string>
    <string name="chHeure">choisir une heure</string>
    <string name="hr">Heure :</string>
    <string name="vfdispo">Vérifier</string>
    <string name="img_profile">Choisir une image</string>
    <string name="esp_med">Espace Médecin</string>
    <string name="disp">Disponibilité</string>
    <string name="creerDispo">1. Créer une disponibilité</string>
    <string name="listDispo">"2. Mes disponibilités "</string>
    <string name="gstDispo">Gestion des disponibilités</string>
    <string name="jourDispo">Choisir un jour</string>
    <string name="h1">Heure 1 :</string>
    <string name="h2">Heure 2 :</string>
    <string name="creeDispo">Création d\'une disponibilité</string>
    <string name="crDispo">Créer</string>
    <string name="plg1">Plage 1 :</string>
    <string name="debut">Heure début:</string>
    <string name="fin">Heure fin:</string>
    <string name="plg2">Plage 2 :</string>
    <string name="supp">Supprimer</string>
    <string name="modf">Modifier</string>
    <string name="jr">Jour :</string>
    <string name="del">Vous allez supprimer la disponibilité :</string>
    <string name="conf">Confirmer</string>
    <string name="anul">Annuler</string>
    <string name="updte">Vous êtes entrai de modifier la disponibilité :</string>
    <string name="def_consult">Nouvelle Consultation</string>
    <string name="mes_consult">Mes Consultations</string>
    <string name="iss_consult">Issue</string>
    <string name="cree">Creer</string>
    <string name="rdvavc">Rendez-vous avec :</string>
    <string name="consl">Consulter</string>
    <string name="msrdv">Mes RDV</string>
    <string name="consul">Ecrire votre consultation</string>
    <string name="mail_pat">Mail Patient :</string>
    <string name="date">Date :</string>
    <string name="mail_med">Mail Médecin :</string>
    <string name="sit">Situarion :</string>
    <string name="acc">Accueil</string>
    <string name="prise_rdv">"Vous êtes entrain de <br/> prendre RDV avec : "</string>
    <string name="mes_rdv">Mes rendez-vous</string>
    <string name="con">Consultation du </string>
    <string name="ch">choisir</string>
    <string name="mes_dispo">"Mes disponibilités "</string>
    <string name="pat_cons">Patients consultés</string>
    <string name="mdp">Mot de passe oublié ?</string>

    <string-array name="situations">

        <item>Marié(e)</item>
        <item>Célibataire</item>
        <item>Veuf-ve</item>
    </string-array>

    <string-array name="specialite">

        <item>Généraliste</item>
        <item>Dentiste</item>
        <item>Cardiologue</item>
        <item> Gynécologue</item>
    </string-array>
</resources>
