<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="200dp"
    android:padding="10dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/del"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/jour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jr"/>
    <TextView
        android:id="@+id/plage_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plg1"/>
    <TextView
        android:id="@+id/plage_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plg2"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/annul_suppr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@android:color/holo_red_light"
            android:text="@string/anul"/>
        <TextView
            android:id="@+id/conf_suppr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@android:color/holo_green_light"
            android:text="@string/conf"/>
    </LinearLayout>

</LinearLayout>