<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="200dp"
    android:padding="10dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updte"
        android:textSize="16sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="16sp"
            android:text="@string/jr"/>
        <TextView
            android:id="@+id/jour_modif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jr"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="16sp"
            android:text="@string/plg1"/>
        <EditText
            android:id="@+id/plage_1_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plg1"/>
    </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textStyle="bold"
           android:textColor="#000"
           android:textSize="16sp"
           android:text="@string/plg2"/>
       <EditText
           android:id="@+id/plage_2_edit"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/plg2"/>
   </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/annul_modif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@android:color/holo_red_light"
            android:text="@string/anul"/>
        <TextView
            android:id="@+id/conf_modif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@android:color/holo_green_light"
            android:text="@string/modf"/>
    </LinearLayout>

</LinearLayout>