<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:background="#fff"
    android:elevation="1dp"
    android:padding="10dp"
    android:layout_height="wrap_content">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="5dp"
       android:orientation="horizontal">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="16sp"
           android:textStyle="bold"
           android:textColor="@color/darkOffi"
           android:text="@string/rdvavc"/>
       <TextView
           android:id="@+id/nom_patient"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="10dp"
           android:textColor="@color/darkOffi"
           android:textSize="16sp"
           android:text="Place holder"/>

   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/darkOffi"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/jr"/>
        <TextView
            android:id="@+id/jour_rdv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/darkOffi"
            android:textSize="16sp"
            android:layout_marginStart="10dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/darkOffi"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/hr"/>
        <TextView
            android:id="@+id/heure_rdv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/darkOffi"
            android:text="Place holder"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingTop="5dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/consulter"
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:background="@color/officialColor"
            android:textColor="#fff"
            android:layout_marginEnd="10dp"
            android:layout_height="30dp"
            android:text="@string/consl"/>
        <Button
            android:id="@+id/annul_rdv"
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:background="@color/darkOffi"
            android:textColor="#fff"
            android:layout_height="30dp"
            android:text="@string/anul"/>

    </LinearLayout>


</LinearLayout>