<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreerDispoAct">
    <include
        layout="@layout/entete_app"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creeDispo"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/darkOffi"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:padding="10dp"

        android:orientation="horizontal">
        <TextView
            android:id="@+id/jourDispo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:textSize="16sp"
            android:textColor="@color/darkOffi"
            android:textStyle="bold"
            android:text="@string/jr"/>
        <TextView
            android:id="@+id/chjourDispo"
            android:textSize="16sp"
            android:textColor="@color/darkOffi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jourDispo"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkOffi"
                android:textStyle="bold"
                android:layout_gravity="left"
                android:layout_marginBottom="10dp"
                android:text="@string/plg1"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/heure_dbt_1"
                    android:layout_width="wrap_content"
                    android:textColor="@color/darkOffi"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:text="@string/debut"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/choix_heure_dbt_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/ch"
                    android:textColor="@color/darkOffi"
                    android:textSize="16sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/heure_fin_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/darkOffi"
                    android:textStyle="bold"
                    android:text="@string/fin"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/choix_heure_fin_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ch"
                    android:textColor="@color/darkOffi"
                    android:textSize="16sp"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkOffi"
                android:textStyle="bold"
                android:layout_gravity="left"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:text="@string/plg2"/>

            <LinearLayout
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/heure_dbt_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/darkOffi"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/debut"/>
                <TextView
                    android:id="@+id/choix_heure_dbt_2"
                    android:textSize="16sp"
                    android:textColor="@color/darkOffi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ch"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/heure_fin_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/darkOffi"
                    android:textStyle="bold"
                    android:text="@string/fin"/>
                <TextView

                    android:id="@+id/choix_heure_fin_2"
                    android:textSize="16sp"
                    android:textColor="@color/darkOffi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ch"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/creerDispo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crDispo"
        android:background="@color/officialColor"
        android:textColor="#fff"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>


</LinearLayout>