<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:background="#FFF"
    android:padding="5dp"
    android:elevation="1dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/darkOffi"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:text="@string/rdvavc"/>
        <TextView
            android:id="@+id/nom_medecin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textStyle="normal"
            android:textColor="@color/darkOffi"
            android:text="Place holder"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/darkOffi"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:text="@string/jr"/>
        <TextView
            android:id="@+id/jour_rdv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textColor="@color/darkOffi"
            android:text="Place holder"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/darkOffi"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/hr"/>
        <TextView
            android:id="@+id/heure_rdv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/darkOffi"
            android:text="Place holder"/>
    </LinearLayout>
    <Button
        android:id="@+id/annul_rdv"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textAllCaps="false"
        android:layout_marginStart="5dp"
        android:textColor="#fff"
        android:background="@color/officialColor"
        android:layout_marginTop="5dp"
        android:text="@string/anul"/>


</LinearLayout>