<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".DetailMedecin">
    <include
        layout="@layout/entete_app_patient"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="40dp"
        android:paddingStart="50dp"
        android:layout_gravity="center">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"

           android:orientation="horizontal">
           <de.hdodenhof.circleimageview.CircleImageView
               android:id="@+id/image_med"
               android:layout_width="50dp"
               android:layout_gravity="center"
               android:layout_marginEnd="15dp"
               android:layout_height="50dp"
               android:src="@drawable/ic_doctor"/>
           <TextView
               android:id="@+id/nom_prenom"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="18sp"
               android:text="Dr Ali Ibrahim"
               android:layout_marginTop="20dp"
               android:textColor="#000"
               android:textAllCaps="true"

               />
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="5dp"
           android:orientation="horizontal">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:paddingEnd="15dp"
               android:text="@string/spe"
               android:textColor="#000"
               android:textSize="18sp"
               android:textStyle="bold" />
           <TextView
               android:id="@+id/specialite"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="#000"
               android:textSize="18sp"
               android:text="Cardiologue à Rabat"/>
       </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="15dp"
                android:text="@string/vil"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/adresse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="18sp"
                android:text="Cardiologue à Rabat"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginEnd="15dp"
                android:text="@string/email"
                />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="18sp"
                android:text="Email : ibra_ali@gmail.com"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/tel"
                />
            <TextView
                android:id="@+id/tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="18sp"
                android:text="Tél : 0602581347"/>
        </LinearLayout>

    </LinearLayout>
    <Button
        android:id="@+id/rdv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_gravity="center"
        android:background="@drawable/plus_btn_bg"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/prdv"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="18sp" />

</LinearLayout>